# flow2.0

./: LICENSE  README.MD
api/: .env.example  .gitignore  Dockerfile  compose.yml  docker-compose.yml  package.json
api/docker/: Dockerfile.prod  compose.dev.yml  compose.prod.yml
api/src/: app.module.ts
api/src/controller/: auth.controller.ts  episode.controller.ts  user.controller.ts
api/src/decorators/: auth.decorator.ts  me.decorator.ts
api/src/dto/: register-episode.dto.ts  register-user.dto.ts
api/src/entities/: episode.entity.ts  inveted.entity.ts  user.entity.ts
api/src/guards/: roles.guard.ts  session.guard.ts
api/src/interfaces/: repository.interface.ts
api/src/modules/: episode.module.ts  flow-connect.module.ts  user.module.ts
api/src/repositories/: episode.repository.ts  user.repository.ts
api/src/services/: auth.service.ts  episode.service.ts  upload.service.ts  user.service.ts
api/src/utils/: enum-type.util.ts
api/src/ws/: flow-connect.gateway.ts
libflow/: .gitignore  Cargo.toml  README.md
libflow/examples/rust/: Cargo.toml
libflow/src/: lib.rs  main.rs
libflow/src/play/: mod.rs
libflow/src/ws/: mod.rs
video_processor/: .env.example  .gitignore  Cargo.toml  Dockerfile
video_processor/src/: main.rs
video_processor/src/processor/: mod.rs
video_processor/src/rabbitmq/: mod.rs
video_processor/src/request/: mod.rs
video_processor/src/upload/: mod.rs
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: Banner.tsx  ButtonPlayPausePlayer.tsx  Player.tsx
(+2 files in other folders)
