[package]
name = "video_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
amiquip = "0.4.2"
serde_json = "1.0.132"
serde = "1.0.213"
reqwest = "0.12.8"
dotenv = "0.15.0"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
futures = "0.3.31"
bytes = "1.8.0"